[package]
name = "tokio-byteorder"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
description = "Asynchronous library for reading/writing numbers in big-endian and little-endian."
repository = "https://github.com/jonhoo/tokio-byteorder"
edition = "2018"

categories = ["encoding", "parsing", "asynchronous"]
keywords = ["byte", "endian", "big-endian", "little-endian", "binary", "tokio"]

license = "Unlicense OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0-alpha.4", default-features = false, features = ["io"] }
byteorder = "1.3.2"

[dev-dependencies]
tokio = "0.2.0-alpha.4"
