[package]
name = "tokio-byteorder"
version = "0.1.0"
edition = "2018"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

readme = "README.md"
description = "Asynchronous library for reading/writing numbers in big-endian and little-endian."
repository = "https://github.com/jonhoo/tokio-byteorder"

keywords = ["byte", "endian", "big-endian", "little-endian", "tokio"]
categories = ["encoding", "parsing", "asynchronous"]

license = "Unlicense OR MIT"

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "tokio-byteorder", build = "12" }
codecov = { repository = "jonhoo/tokio-byteorder", branch = "master", service = "github" }


[dependencies]
tokio = { version = "0.2.0-alpha.4", default-features = false, features = ["io"] }
byteorder = "1.3.2"

[dev-dependencies]
tokio = "0.2.0-alpha.4"
