[package]
name = "tokio-byteorder"
version = "0.3.0"
edition = "2018"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

readme = "README.md"
description = "Asynchronous library for reading/writing numbers in big-endian and little-endian."
repository = "https://github.com/jonhoo/tokio-byteorder"

keywords = ["byte", "endian", "big-endian", "little-endian", "tokio"]
categories = ["encoding", "parsing", "asynchronous"]

license = "Unlicense OR MIT"

[dependencies]
tokio = { version = "1", features = ["io-util"] }
byteorder = "1.3.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
